loading text align fix

--- a/sorties-de-secours/public/css/loading.css
+++ b/sorties-de-secours/public/css/loading.css
@@ -1,4 +1,4 @@
-#sound-section {
+#loading-section {
     text-align: center;
 }
 
